2009-10-07  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIORChan.c (ErrnoReturn): Replace the hardwired
	  constant 11 with the proper errno define, EAGAIN. What was I
	  thinking ? The BSD's have a different errno assignment and break
	  with the hardwired number. Reported by emiliano on the chat.

2009-10-06  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclInterp.c (SlaveEval): Agressive stomping of internal reps
	was added as part of the NRE patch of 2008-07-13.  This doesn't appear
	to actually be needed, and it hurts quite a bit when large lists lose
	their intreps and require reparsing.  Thanks to Ashok Nadkarni for
	reporting the problem.

	* generic/tclTomMathInt.h (new): Public header tclTomMath.h had 
	* generic/tclTomMath.h:	dependence on private headers, breaking use
	* generic/tommath.h:	by extensions [Bug 1941434].

2009-10-05  Andreas Kupries  <andreask@activestate.com>

	* library/safe.tcl (AliasGlob): Fixed conversion of catch to
	  try/finally, it had an 'on ok msg' branch missing, causing a
	  silent error immediately, and bogus glob results, breaking
	  search for Tcl modules.

2009-10-04  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tclMacOSXBundle.c:	Workaround CF memory managment bug in
	* unix/tclUnixInit.c:		Mac OS X 10.4 & earlier. [Bug 2569449]

2009-10-02  Kevin B. Kenny  <kennykb@acm.org>

	* library/tzdata/Africa/Cairo:
	* library/tzdata/Asia/Gaza:
	* library/tzdata/Asia/Karachi:
	* library/tzdata/Pacific/Apia:	Olson's tzdata2009n.
	
2009-09-29  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclDictObj.c:		Updated freeIntRepProc routines so
	* generic/tclExecute.c:		that they set the typePtr field to
	* generic/tclIO.c:		NULL so that the Tcl_Obj is not left
	* generic/tclIndexObj.c:	in an inconsistent state.
	* generic/tclInt.h:		[Bug 2857044]
	* generic/tclListObj.c:
	* generic/tclNamesp.c:
	* generic/tclOOCall.c:
	* generic/tclObj.c:
	* generic/tclPathObj.c:
	* generic/tclProc.c: